[project]
name = "just-ff"
version = "0.2.0-alpha"
description = ""
authors = [
    {name = "dimnissv",email = "dimnissv@yandex.kz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
packages = [{ include = "just_ff" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
